--- a/components/examples/show_cuties/styles.scss
+++ b/components/examples/show_cuties/styles.scss
@@ -198,3 +198,13 @@
     }
   }
 }
+
+@media (max-width: $mScreenSmall) {
+  .container {
+    .token {
+      .logo {
+        display: none;
+      }
+    }
+  }
+}
