--- a/components/navigation/styles.scss
+++ b/components/navigation/styles.scss
@@ -141,3 +141,9 @@
     top: 532px;
   }
 }
+
+@media (max-width: $mScreenSmall) {
+  .slider-dots {
+    top: 521px;
+  }
+}
